# Raytracing-referencebook

./: .gitignore  Cargo.toml  README.md
raytracer/: Cargo.toml
raytracer/benches/: benchmark.md  my_benchmark.rs
raytracer/src/: Hit.rs  main.rs  scene.rs
raytracer/src/basic/: RAY.rs  VEC3.rs  camera.rs  mod.rs
raytracer/src/bvh/: aabb.rs  bvh_node.rs
raytracer/src/material/: dielectric.rs  diffuse.rs  isotropic.rs  lambertian.rs  matel.rs  mod.rs  rectangle.rs
raytracer/src/object/: cube.rs  medium.rs  mod.rs  rectangle.rs  rotate.rs  sphere.rs  translate.rs
raytracer/src/pdf/: cospdf.rs  hittablepdf.rs  mixturepdf.rs  mod.rs
raytracer/src/texture/: checker.rs  image_texture.rs  mod.rs  obj_texture.rs  perlin.rs  solid_color.rs
raytracer_codegen/: Cargo.toml  macro.md
raytracer_codegen/src/: lib.rs  vec3.rs
src/: Hit.rs  RAY.rs  Shpere.rs  VEC3.rs  hit_base.rs  main.rs  sphere.rs
src/basic/: RAY.rs  VEC3.rs  camera.rs  mod.rs
src/material/: dielectric.rs  lambertian.rs  matel.rs  mod.rs
