[package]
name = "Raytracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ndarray = "0.13.0"
tobj = "3.2.2"

image = "0.23"
console = "0.9.1"    # console text format
indicatif = "0.16.2" # progress bar
